📑🏦 Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <style>
     
       h1 {color:DA3817;} 
-      body {background-color: 7C1B07; }
-      p{color:DA3817}
+      body {background-color: rgb(124, 27, 7); }
+      p{color:rgb(218, 56, 23)}
     </style>
     
   </head>
